Lab9-yacc/y.output
Terminals unused in grammar

   different
   apostrophe
   quote
   space
   dot


State 39 conflicts: 1 shift/reduce
State 81 conflicts: 8 shift/reduce


Grammar

    0 $accept: program $end

    1 program: AT compound_statement AT

    2 compound_statement: declaration_list statement_list

    3 declaration_list: declaration
    4                 | declaration declaration_list

    5 declaration: type identifier_list semicolon
    6            | type assignment_stmt semicolon

    7 type: INTEGER
    8     | STRING

    9 identifier_list: identifier
   10                | identifier leftBracket noconst rightBracket
   11                | identifier comma identifier_list

   12 statement_list: statement
   13               | statement statement_list

   14 statement: read_stmt
   15          | write_stmt
   16          | if_stmt
   17          | for_stmt
   18          | while_stmt
   19          | assignment_stmt

   20 read_stmt: READ leftRoundBracket identifier_list rightRoundBracket semicolon

   21 write_stmt: WRITE leftRoundBracket identifier_list
   22           | identifier_list stringconst
   23           | stringconst rightRoundBracket semicolon

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF condition colon leftCurlyBracket statement_list rightCurlyBracket

   26 for_stmt: FOR identifier IN RANGE range_expr colon leftCurlyBracket statement_list rightCurlyBracket

   27 range_expr: leftRoundBracket expression comma expression rightRoundBracket
   28           | leftRoundBracket expression comma expression comma noconst rightRoundBracket

   29 while_stmt: WHILE condition colon leftCurlyBracket statement_list rightCurlyBracket

   30 assignment_stmt: identifier eq expression semicolon

   31 condition: expression operator expression
   32          | condition operator condition

   33 operator: less
   34         | lessOrEqual
   35         | more
   36         | moreOrEqual
   37         | eq
   38         | and
   39         | or
   40         | equal

   41 expression: term
   42           | expression plus term
   43           | expression minus term

   44 term: factor
   45     | term mul factor
   46     | term division factor
   47     | term mod factor

   48 factor: identifier_list
   49       | noconst
   50       | stringconst
   51       | leftRoundBracket expression rightRoundBracket

   52 identifier: IDENTIFIER

   53 noconst: NUMBER_CONST

   54 stringconst: STRING_CONST


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 24 25
AT (259) 1
ELSE (260) 24
READ (261) 20
WRITE (262) 21
INTEGER (263) 7
STRING (264) 8
FOR (265) 26
IN (266) 26
RANGE (267) 26
WHILE (268) 29
plus (269) 42
minus (270) 43
mul (271) 45
division (272) 46
mod (273) 47
lessOrEqual (274) 34
moreOrEqual (275) 36
less (276) 33
more (277) 35
equal (278) 40
different (279)
eq (280) 30 37
and (281) 38
or (282) 39
leftCurlyBracket (283) 24 25 26 29
rightCurlyBracket (284) 24 25 26 29
leftRoundBracket (285) 20 21 27 28 51
rightRoundBracket (286) 20 23 27 28 51
leftBracket (287) 10
rightBracket (288) 10
colon (289) 24 25 26 29
semicolon (290) 5 6 20 23 30
comma (291) 11 27 28
apostrophe (292)
quote (293)
space (294)
dot (295)
IDENTIFIER (296) 52
NUMBER_CONST (297) 53
STRING_CONST (298) 54


Nonterminals, with rules where they appear

$accept (44)
    on left: 0
program (45)
    on left: 1, on right: 0
compound_statement (46)
    on left: 2, on right: 1
declaration_list (47)
    on left: 3 4, on right: 2 4
declaration (48)
    on left: 5 6, on right: 3 4
type (49)
    on left: 7 8, on right: 5 6
identifier_list (50)
    on left: 9 10 11, on right: 5 11 20 21 22 48
statement_list (51)
    on left: 12 13, on right: 2 13 24 25 26 29
statement (52)
    on left: 14 15 16 17 18 19, on right: 12 13
read_stmt (53)
    on left: 20, on right: 14
write_stmt (54)
    on left: 21 22 23, on right: 15
if_stmt (55)
    on left: 24 25, on right: 16
for_stmt (56)
    on left: 26, on right: 17
range_expr (57)
    on left: 27 28, on right: 26
while_stmt (58)
    on left: 29, on right: 18
assignment_stmt (59)
    on left: 30, on right: 6 19
condition (60)
    on left: 31 32, on right: 24 25 29 32
operator (61)
    on left: 33 34 35 36 37 38 39 40, on right: 31 32
expression (62)
    on left: 41 42 43, on right: 27 28 30 31 42 43 51
term (63)
    on left: 44 45 46 47, on right: 41 42 43 45 46 47
factor (64)
    on left: 48 49 50 51, on right: 44 45 46 47
identifier (65)
    on left: 52, on right: 9 10 11 26 30
noconst (66)
    on left: 53, on right: 10 28 49
stringconst (67)
    on left: 54, on right: 22 23 50


state 0

    0 $accept: . program $end

    AT  shift, and go to state 1

    program  go to state 2


state 1

    1 program: AT . compound_statement AT

    INTEGER  shift, and go to state 3
    STRING   shift, and go to state 4

    compound_statement  go to state 5
    declaration_list    go to state 6
    declaration         go to state 7
    type                go to state 8


state 2

    0 $accept: program . $end

    $end  shift, and go to state 9


state 3

    7 type: INTEGER .

    $default  reduce using rule 7 (type)


state 4

    8 type: STRING .

    $default  reduce using rule 8 (type)


state 5

    1 program: AT compound_statement . AT

    AT  shift, and go to state 10


state 6

    2 compound_statement: declaration_list . statement_list

    IF            shift, and go to state 11
    READ          shift, and go to state 12
    WRITE         shift, and go to state 13
    FOR           shift, and go to state 14
    WHILE         shift, and go to state 15
    IDENTIFIER    shift, and go to state 16
    STRING_CONST  shift, and go to state 17

    identifier_list  go to state 18
    statement_list   go to state 19
    statement        go to state 20
    read_stmt        go to state 21
    write_stmt       go to state 22
    if_stmt          go to state 23
    for_stmt         go to state 24
    while_stmt       go to state 25
    assignment_stmt  go to state 26
    identifier       go to state 27
    stringconst      go to state 28


state 7

    3 declaration_list: declaration .
    4                 | declaration . declaration_list

    INTEGER  shift, and go to state 3
    STRING   shift, and go to state 4

    $default  reduce using rule 3 (declaration_list)

    declaration_list  go to state 29
    declaration       go to state 7
    type              go to state 8


state 8

    5 declaration: type . identifier_list semicolon
    6            | type . assignment_stmt semicolon

    IDENTIFIER  shift, and go to state 16

    identifier_list  go to state 30
    assignment_stmt  go to state 31
    identifier       go to state 27


state 9

    0 $accept: program $end .

    $default  accept


state 10

    1 program: AT compound_statement AT .

    $default  reduce using rule 1 (program)


state 11

   24 if_stmt: IF . condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF . condition colon leftCurlyBracket statement_list rightCurlyBracket

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    condition        go to state 35
    expression       go to state 36
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 12

   20 read_stmt: READ . leftRoundBracket identifier_list rightRoundBracket semicolon

    leftRoundBracket  shift, and go to state 42


state 13

   21 write_stmt: WRITE . leftRoundBracket identifier_list

    leftRoundBracket  shift, and go to state 43


state 14

   26 for_stmt: FOR . identifier IN RANGE range_expr colon leftCurlyBracket statement_list rightCurlyBracket

    IDENTIFIER  shift, and go to state 16

    identifier  go to state 44


state 15

   29 while_stmt: WHILE . condition colon leftCurlyBracket statement_list rightCurlyBracket

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    condition        go to state 45
    expression       go to state 36
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 16

   52 identifier: IDENTIFIER .

    $default  reduce using rule 52 (identifier)


state 17

   54 stringconst: STRING_CONST .

    $default  reduce using rule 54 (stringconst)


state 18

   22 write_stmt: identifier_list . stringconst

    STRING_CONST  shift, and go to state 17

    stringconst  go to state 46


state 19

    2 compound_statement: declaration_list statement_list .

    $default  reduce using rule 2 (compound_statement)


state 20

   12 statement_list: statement .
   13               | statement . statement_list

    IF            shift, and go to state 11
    READ          shift, and go to state 12
    WRITE         shift, and go to state 13
    FOR           shift, and go to state 14
    WHILE         shift, and go to state 15
    IDENTIFIER    shift, and go to state 16
    STRING_CONST  shift, and go to state 17

    $default  reduce using rule 12 (statement_list)

    identifier_list  go to state 18
    statement_list   go to state 47
    statement        go to state 20
    read_stmt        go to state 21
    write_stmt       go to state 22
    if_stmt          go to state 23
    for_stmt         go to state 24
    while_stmt       go to state 25
    assignment_stmt  go to state 26
    identifier       go to state 27
    stringconst      go to state 28


state 21

   14 statement: read_stmt .

    $default  reduce using rule 14 (statement)


state 22

   15 statement: write_stmt .

    $default  reduce using rule 15 (statement)


state 23

   16 statement: if_stmt .

    $default  reduce using rule 16 (statement)


state 24

   17 statement: for_stmt .

    $default  reduce using rule 17 (statement)


state 25

   18 statement: while_stmt .

    $default  reduce using rule 18 (statement)


state 26

   19 statement: assignment_stmt .

    $default  reduce using rule 19 (statement)


state 27

    9 identifier_list: identifier .
   10                | identifier . leftBracket noconst rightBracket
   11                | identifier . comma identifier_list
   30 assignment_stmt: identifier . eq expression semicolon

    eq           shift, and go to state 48
    leftBracket  shift, and go to state 49
    comma        shift, and go to state 50

    $default  reduce using rule 9 (identifier_list)


state 28

   23 write_stmt: stringconst . rightRoundBracket semicolon

    rightRoundBracket  shift, and go to state 51


state 29

    4 declaration_list: declaration declaration_list .

    $default  reduce using rule 4 (declaration_list)


state 30

    5 declaration: type identifier_list . semicolon

    semicolon  shift, and go to state 52


state 31

    6 declaration: type assignment_stmt . semicolon

    semicolon  shift, and go to state 53


state 32

   51 factor: leftRoundBracket . expression rightRoundBracket

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    expression       go to state 54
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 33

   53 noconst: NUMBER_CONST .

    $default  reduce using rule 53 (noconst)


state 34

   48 factor: identifier_list .

    $default  reduce using rule 48 (factor)


state 35

   24 if_stmt: IF condition . colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF condition . colon leftCurlyBracket statement_list rightCurlyBracket
   32 condition: condition . operator condition

    lessOrEqual  shift, and go to state 55
    moreOrEqual  shift, and go to state 56
    less         shift, and go to state 57
    more         shift, and go to state 58
    equal        shift, and go to state 59
    eq           shift, and go to state 60
    and          shift, and go to state 61
    or           shift, and go to state 62
    colon        shift, and go to state 63

    operator  go to state 64


state 36

   31 condition: expression . operator expression
   42 expression: expression . plus term
   43           | expression . minus term

    plus         shift, and go to state 65
    minus        shift, and go to state 66
    lessOrEqual  shift, and go to state 55
    moreOrEqual  shift, and go to state 56
    less         shift, and go to state 57
    more         shift, and go to state 58
    equal        shift, and go to state 59
    eq           shift, and go to state 60
    and          shift, and go to state 61
    or           shift, and go to state 62

    operator  go to state 67


state 37

   41 expression: term .
   45 term: term . mul factor
   46     | term . division factor
   47     | term . mod factor

    mul       shift, and go to state 68
    division  shift, and go to state 69
    mod       shift, and go to state 70

    $default  reduce using rule 41 (expression)


state 38

   44 term: factor .

    $default  reduce using rule 44 (term)


state 39

    9 identifier_list: identifier .
   10                | identifier . leftBracket noconst rightBracket
   11                | identifier . comma identifier_list

    leftBracket  shift, and go to state 49
    comma        shift, and go to state 50

    comma     [reduce using rule 9 (identifier_list)]
    $default  reduce using rule 9 (identifier_list)


state 40

   49 factor: noconst .

    $default  reduce using rule 49 (factor)


state 41

   50 factor: stringconst .

    $default  reduce using rule 50 (factor)


state 42

   20 read_stmt: READ leftRoundBracket . identifier_list rightRoundBracket semicolon

    IDENTIFIER  shift, and go to state 16

    identifier_list  go to state 71
    identifier       go to state 39


state 43

   21 write_stmt: WRITE leftRoundBracket . identifier_list

    IDENTIFIER  shift, and go to state 16

    identifier_list  go to state 72
    identifier       go to state 39


state 44

   26 for_stmt: FOR identifier . IN RANGE range_expr colon leftCurlyBracket statement_list rightCurlyBracket

    IN  shift, and go to state 73


state 45

   29 while_stmt: WHILE condition . colon leftCurlyBracket statement_list rightCurlyBracket
   32 condition: condition . operator condition

    lessOrEqual  shift, and go to state 55
    moreOrEqual  shift, and go to state 56
    less         shift, and go to state 57
    more         shift, and go to state 58
    equal        shift, and go to state 59
    eq           shift, and go to state 60
    and          shift, and go to state 61
    or           shift, and go to state 62
    colon        shift, and go to state 74

    operator  go to state 64


state 46

   22 write_stmt: identifier_list stringconst .

    $default  reduce using rule 22 (write_stmt)


state 47

   13 statement_list: statement statement_list .

    $default  reduce using rule 13 (statement_list)


state 48

   30 assignment_stmt: identifier eq . expression semicolon

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    expression       go to state 75
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 49

   10 identifier_list: identifier leftBracket . noconst rightBracket

    NUMBER_CONST  shift, and go to state 33

    noconst  go to state 76


state 50

   11 identifier_list: identifier comma . identifier_list

    IDENTIFIER  shift, and go to state 16

    identifier_list  go to state 77
    identifier       go to state 39


state 51

   23 write_stmt: stringconst rightRoundBracket . semicolon

    semicolon  shift, and go to state 78


state 52

    5 declaration: type identifier_list semicolon .

    $default  reduce using rule 5 (declaration)


state 53

    6 declaration: type assignment_stmt semicolon .

    $default  reduce using rule 6 (declaration)


state 54

   42 expression: expression . plus term
   43           | expression . minus term
   51 factor: leftRoundBracket expression . rightRoundBracket

    plus               shift, and go to state 65
    minus              shift, and go to state 66
    rightRoundBracket  shift, and go to state 79


state 55

   34 operator: lessOrEqual .

    $default  reduce using rule 34 (operator)


state 56

   36 operator: moreOrEqual .

    $default  reduce using rule 36 (operator)


state 57

   33 operator: less .

    $default  reduce using rule 33 (operator)


state 58

   35 operator: more .

    $default  reduce using rule 35 (operator)


state 59

   40 operator: equal .

    $default  reduce using rule 40 (operator)


state 60

   37 operator: eq .

    $default  reduce using rule 37 (operator)


state 61

   38 operator: and .

    $default  reduce using rule 38 (operator)


state 62

   39 operator: or .

    $default  reduce using rule 39 (operator)


state 63

   24 if_stmt: IF condition colon . leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF condition colon . leftCurlyBracket statement_list rightCurlyBracket

    leftCurlyBracket  shift, and go to state 80


state 64

   32 condition: condition operator . condition

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    condition        go to state 81
    expression       go to state 36
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 65

   42 expression: expression plus . term

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    term             go to state 82
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 66

   43 expression: expression minus . term

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    term             go to state 83
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 67

   31 condition: expression operator . expression

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    expression       go to state 84
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 68

   45 term: term mul . factor

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    factor           go to state 85
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 69

   46 term: term division . factor

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    factor           go to state 86
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 70

   47 term: term mod . factor

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    factor           go to state 87
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 71

   20 read_stmt: READ leftRoundBracket identifier_list . rightRoundBracket semicolon

    rightRoundBracket  shift, and go to state 88


state 72

   21 write_stmt: WRITE leftRoundBracket identifier_list .

    $default  reduce using rule 21 (write_stmt)


state 73

   26 for_stmt: FOR identifier IN . RANGE range_expr colon leftCurlyBracket statement_list rightCurlyBracket

    RANGE  shift, and go to state 89


state 74

   29 while_stmt: WHILE condition colon . leftCurlyBracket statement_list rightCurlyBracket

    leftCurlyBracket  shift, and go to state 90


state 75

   30 assignment_stmt: identifier eq expression . semicolon
   42 expression: expression . plus term
   43           | expression . minus term

    plus       shift, and go to state 65
    minus      shift, and go to state 66
    semicolon  shift, and go to state 91


state 76

   10 identifier_list: identifier leftBracket noconst . rightBracket

    rightBracket  shift, and go to state 92


state 77

   11 identifier_list: identifier comma identifier_list .

    $default  reduce using rule 11 (identifier_list)


state 78

   23 write_stmt: stringconst rightRoundBracket semicolon .

    $default  reduce using rule 23 (write_stmt)


state 79

   51 factor: leftRoundBracket expression rightRoundBracket .

    $default  reduce using rule 51 (factor)


state 80

   24 if_stmt: IF condition colon leftCurlyBracket . statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF condition colon leftCurlyBracket . statement_list rightCurlyBracket

    IF            shift, and go to state 11
    READ          shift, and go to state 12
    WRITE         shift, and go to state 13
    FOR           shift, and go to state 14
    WHILE         shift, and go to state 15
    IDENTIFIER    shift, and go to state 16
    STRING_CONST  shift, and go to state 17

    identifier_list  go to state 18
    statement_list   go to state 93
    statement        go to state 20
    read_stmt        go to state 21
    write_stmt       go to state 22
    if_stmt          go to state 23
    for_stmt         go to state 24
    while_stmt       go to state 25
    assignment_stmt  go to state 26
    identifier       go to state 27
    stringconst      go to state 28


state 81

   32 condition: condition . operator condition
   32          | condition operator condition .

    lessOrEqual  shift, and go to state 55
    moreOrEqual  shift, and go to state 56
    less         shift, and go to state 57
    more         shift, and go to state 58
    equal        shift, and go to state 59
    eq           shift, and go to state 60
    and          shift, and go to state 61
    or           shift, and go to state 62

    lessOrEqual  [reduce using rule 32 (condition)]
    moreOrEqual  [reduce using rule 32 (condition)]
    less         [reduce using rule 32 (condition)]
    more         [reduce using rule 32 (condition)]
    equal        [reduce using rule 32 (condition)]
    eq           [reduce using rule 32 (condition)]
    and          [reduce using rule 32 (condition)]
    or           [reduce using rule 32 (condition)]
    $default     reduce using rule 32 (condition)

    operator  go to state 64


state 82

   42 expression: expression plus term .
   45 term: term . mul factor
   46     | term . division factor
   47     | term . mod factor

    mul       shift, and go to state 68
    division  shift, and go to state 69
    mod       shift, and go to state 70

    $default  reduce using rule 42 (expression)


state 83

   43 expression: expression minus term .
   45 term: term . mul factor
   46     | term . division factor
   47     | term . mod factor

    mul       shift, and go to state 68
    division  shift, and go to state 69
    mod       shift, and go to state 70

    $default  reduce using rule 43 (expression)


state 84

   31 condition: expression operator expression .
   42 expression: expression . plus term
   43           | expression . minus term

    plus   shift, and go to state 65
    minus  shift, and go to state 66

    $default  reduce using rule 31 (condition)


state 85

   45 term: term mul factor .

    $default  reduce using rule 45 (term)


state 86

   46 term: term division factor .

    $default  reduce using rule 46 (term)


state 87

   47 term: term mod factor .

    $default  reduce using rule 47 (term)


state 88

   20 read_stmt: READ leftRoundBracket identifier_list rightRoundBracket . semicolon

    semicolon  shift, and go to state 94


state 89

   26 for_stmt: FOR identifier IN RANGE . range_expr colon leftCurlyBracket statement_list rightCurlyBracket

    leftRoundBracket  shift, and go to state 95

    range_expr  go to state 96


state 90

   29 while_stmt: WHILE condition colon leftCurlyBracket . statement_list rightCurlyBracket

    IF            shift, and go to state 11
    READ          shift, and go to state 12
    WRITE         shift, and go to state 13
    FOR           shift, and go to state 14
    WHILE         shift, and go to state 15
    IDENTIFIER    shift, and go to state 16
    STRING_CONST  shift, and go to state 17

    identifier_list  go to state 18
    statement_list   go to state 97
    statement        go to state 20
    read_stmt        go to state 21
    write_stmt       go to state 22
    if_stmt          go to state 23
    for_stmt         go to state 24
    while_stmt       go to state 25
    assignment_stmt  go to state 26
    identifier       go to state 27
    stringconst      go to state 28


state 91

   30 assignment_stmt: identifier eq expression semicolon .

    $default  reduce using rule 30 (assignment_stmt)


state 92

   10 identifier_list: identifier leftBracket noconst rightBracket .

    $default  reduce using rule 10 (identifier_list)


state 93

   24 if_stmt: IF condition colon leftCurlyBracket statement_list . rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF condition colon leftCurlyBracket statement_list . rightCurlyBracket

    rightCurlyBracket  shift, and go to state 98


state 94

   20 read_stmt: READ leftRoundBracket identifier_list rightRoundBracket semicolon .

    $default  reduce using rule 20 (read_stmt)


state 95

   27 range_expr: leftRoundBracket . expression comma expression rightRoundBracket
   28           | leftRoundBracket . expression comma expression comma noconst rightRoundBracket

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    expression       go to state 99
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 96

   26 for_stmt: FOR identifier IN RANGE range_expr . colon leftCurlyBracket statement_list rightCurlyBracket

    colon  shift, and go to state 100


state 97

   29 while_stmt: WHILE condition colon leftCurlyBracket statement_list . rightCurlyBracket

    rightCurlyBracket  shift, and go to state 101


state 98

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket . ELSE colon leftCurlyBracket statement_list rightCurlyBracket
   25        | IF condition colon leftCurlyBracket statement_list rightCurlyBracket .

    ELSE  shift, and go to state 102

    $default  reduce using rule 25 (if_stmt)


state 99

   27 range_expr: leftRoundBracket expression . comma expression rightRoundBracket
   28           | leftRoundBracket expression . comma expression comma noconst rightRoundBracket
   42 expression: expression . plus term
   43           | expression . minus term

    plus   shift, and go to state 65
    minus  shift, and go to state 66
    comma  shift, and go to state 103


state 100

   26 for_stmt: FOR identifier IN RANGE range_expr colon . leftCurlyBracket statement_list rightCurlyBracket

    leftCurlyBracket  shift, and go to state 104


state 101

   29 while_stmt: WHILE condition colon leftCurlyBracket statement_list rightCurlyBracket .

    $default  reduce using rule 29 (while_stmt)


state 102

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE . colon leftCurlyBracket statement_list rightCurlyBracket

    colon  shift, and go to state 105


state 103

   27 range_expr: leftRoundBracket expression comma . expression rightRoundBracket
   28           | leftRoundBracket expression comma . expression comma noconst rightRoundBracket

    leftRoundBracket  shift, and go to state 32
    IDENTIFIER        shift, and go to state 16
    NUMBER_CONST      shift, and go to state 33
    STRING_CONST      shift, and go to state 17

    identifier_list  go to state 34
    expression       go to state 106
    term             go to state 37
    factor           go to state 38
    identifier       go to state 39
    noconst          go to state 40
    stringconst      go to state 41


state 104

   26 for_stmt: FOR identifier IN RANGE range_expr colon leftCurlyBracket . statement_list rightCurlyBracket

    IF            shift, and go to state 11
    READ          shift, and go to state 12
    WRITE         shift, and go to state 13
    FOR           shift, and go to state 14
    WHILE         shift, and go to state 15
    IDENTIFIER    shift, and go to state 16
    STRING_CONST  shift, and go to state 17

    identifier_list  go to state 18
    statement_list   go to state 107
    statement        go to state 20
    read_stmt        go to state 21
    write_stmt       go to state 22
    if_stmt          go to state 23
    for_stmt         go to state 24
    while_stmt       go to state 25
    assignment_stmt  go to state 26
    identifier       go to state 27
    stringconst      go to state 28


state 105

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon . leftCurlyBracket statement_list rightCurlyBracket

    leftCurlyBracket  shift, and go to state 108


state 106

   27 range_expr: leftRoundBracket expression comma expression . rightRoundBracket
   28           | leftRoundBracket expression comma expression . comma noconst rightRoundBracket
   42 expression: expression . plus term
   43           | expression . minus term

    plus               shift, and go to state 65
    minus              shift, and go to state 66
    rightRoundBracket  shift, and go to state 109
    comma              shift, and go to state 110


state 107

   26 for_stmt: FOR identifier IN RANGE range_expr colon leftCurlyBracket statement_list . rightCurlyBracket

    rightCurlyBracket  shift, and go to state 111


state 108

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket . statement_list rightCurlyBracket

    IF            shift, and go to state 11
    READ          shift, and go to state 12
    WRITE         shift, and go to state 13
    FOR           shift, and go to state 14
    WHILE         shift, and go to state 15
    IDENTIFIER    shift, and go to state 16
    STRING_CONST  shift, and go to state 17

    identifier_list  go to state 18
    statement_list   go to state 112
    statement        go to state 20
    read_stmt        go to state 21
    write_stmt       go to state 22
    if_stmt          go to state 23
    for_stmt         go to state 24
    while_stmt       go to state 25
    assignment_stmt  go to state 26
    identifier       go to state 27
    stringconst      go to state 28


state 109

   27 range_expr: leftRoundBracket expression comma expression rightRoundBracket .

    $default  reduce using rule 27 (range_expr)


state 110

   28 range_expr: leftRoundBracket expression comma expression comma . noconst rightRoundBracket

    NUMBER_CONST  shift, and go to state 33

    noconst  go to state 113


state 111

   26 for_stmt: FOR identifier IN RANGE range_expr colon leftCurlyBracket statement_list rightCurlyBracket .

    $default  reduce using rule 26 (for_stmt)


state 112

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list . rightCurlyBracket

    rightCurlyBracket  shift, and go to state 114


state 113

   28 range_expr: leftRoundBracket expression comma expression comma noconst . rightRoundBracket

    rightRoundBracket  shift, and go to state 115


state 114

   24 if_stmt: IF condition colon leftCurlyBracket statement_list rightCurlyBracket ELSE colon leftCurlyBracket statement_list rightCurlyBracket .

    $default  reduce using rule 24 (if_stmt)


state 115

   28 range_expr: leftRoundBracket expression comma expression comma noconst rightRoundBracket .

    $default  reduce using rule 28 (range_expr)
